Rounded corners on avatars.

--- a/src/main/webapp/Hablar.css
+++ b/src/main/webapp/Hablar.css
@@ -604,3 +604,9 @@ body {
 .gwt-TextArea {
 	border: 1px solid #bbbbbb;
 }
+
+.hablar-Avatar {
+	border-radius: 5px;
+	width: 24px;
+	height: 24px;
+}
