Adding moz and webkit border-radius.

--- a/src/main/webapp/Hablar.css
+++ b/src/main/webapp/Hablar.css
@@ -607,6 +607,8 @@ body {
 
 .hablar-Avatar {
 	border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
 	width: 24px;
 	height: 24px;
 }
