CSS tweaks, added box-shadow.

--- a/src/main/webapp/Hablar.css
+++ b/src/main/webapp/Hablar.css
@@ -396,7 +396,7 @@ body {
 .hablar-RosterItemWidget .icon {
 	display: block;
 	float: left;
-	margin: 2px 5px 2px 2px;
+	margin: -3px 5px 3px 1px;
 }
 
 .hablar-RosterItemWidget .name {
@@ -606,9 +606,16 @@ body {
 }
 
 .hablar-Avatar {
-	border-radius: 5px;
+    border-radius: 5px;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
-	width: 24px;
-	height: 24px;
+    -khtml-border-radius: 5px;
+    -o-border-radius: 5px;
+    box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
+    -o-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
+    -khtml-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
+    width: 24px;
+    height: 24px;
 }
